Avoid potential tools::Long vs. UNOIDL LONG mismatch

As found when debugging tdf#143534 "Crash in Calc NLP Solver when saving
a document in Write" on Linux x86-64 (where tools::Long is 64-bit long; while
UNOIDL LONG is 32-bit):  These ImplSetPropertyValues cause
comphelper::OPropertyContainerHelper::convertFastPropertyValue to throw via
lcl_throwIllegalPropertyValueTypeException due to the mismatch---which were then
silently caught in UnoDialogControl::windowResized resp.
UnoDialogControl::windowMoved.

Change-Id: I9793204ad49737165e69de7d5e15445ba0e82c85